Fix contrast for @faded-neutral .zenbox, etc
Convert @faded-neutral from RGBA to HEX.  Automated accessibility checkers can't convert RGBA to HEX, so just use the HEX value.

--- a/wdn/templates_4.0/less/_mixins/colors.less
+++ b/wdn/templates_4.0/less/_mixins/colors.less
@@ -32,7 +32,7 @@
 @neutral: #4a3b13;
 @light-neutral: lighten(desaturate(@neutral, 15%), 5%);
 @dark-neutral: darken(mix(@neutral, #666, 60%), 5%);
-@faded-neutral: fadeout(#3b3816, 95%); // To be used for subtle color variations. Works OK on most banded colors
+@faded-neutral: #EDEAE0; // To be used for subtle color variations. Works OK on most banded colors
 
 // Base spinner
 @base-spinner: #137cbd;
